[gd_scene load_steps=2 format=3 uid="uid://r3g5iskx00f"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_wv83e"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_wv83e")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.301961)

[node name="Restart" type="Button" parent="."]
offset_left = 504.0
offset_top = 248.0
offset_right = 648.0
offset_bottom = 311.0
theme_override_font_sizes/font_size = 20
text = "Restart"

[node name="MainMenu" type="Button" parent="."]
offset_left = 504.0
offset_top = 328.0
offset_right = 648.0
offset_bottom = 391.0
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="Quit" type="Button" parent="."]
offset_left = 504.0
offset_top = 408.0
offset_right = 648.0
offset_bottom = 472.0
theme_override_font_sizes/font_size = 20
text = "Exit"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 488.0
offset_top = 128.0
offset_right = 664.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 20
text = "Score: 000"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
<<<<<<< HEAD
offset_left = 488.0
offset_top = 176.0
offset_right = 664.0
offset_bottom = 208.0
=======
layout_mode = 2
offset_left = 451.0
offset_top = 86.0
offset_right = 691.0
offset_bottom = 114.0
>>>>>>> 0de221e (create game over scene)
theme_override_font_sizes/font_size = 20
text = "Time left: 00:00:00"
horizontal_alignment = 1

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
<<<<<<< HEAD
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
=======
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
>>>>>>> 0de221e (create game over scene)
